Add password confirm to html and form.

--- a/EmployeeDB/src/main/resources/messages.properties
+++ b/EmployeeDB/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 NotBlank = {0} is required.
+ConfirmPasswordUnmatch = Password does not match the confirm password. 
 
 familyName=family name
 givenName=given name
